# fitness-rewards

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  elliptical_tracker.ino  fitness_rewards.db  pyproject.toml  server.py  test_server.py
clients/: ha_tv_consumer.py  telegram_bot.py  tv_consumer.py
data/: .gitkeep  fitness_rewards.db
hardware/: README.md
hardware/elliptical_tracker/: elliptical_tracker.ino
src/fitness_rewards/: config.py  main.py
src/fitness_rewards/api/: auth.py
src/fitness_rewards/models/: database.py
tests/: conftest.py  test_server.py
